# TechStart_2Ed

./: .gitignore  README.md  pyproject.toml  specification.md
server/: __init__.py  db.py  documentation.py  main.py
server/controllers/: __init__.py  category.py  marketplace.py  product.py  seller.py
server/models/: __init__.py  category.py  marketplace.py  product.py  relationships.py  seller.py
server/routers/: __init__.py  category.py  marketplace.py  product.py  seller.py
server/schemas/: __init__.py  category.py  marketplace.py  product.py  seller.py
