[tool.poetry]
name = "desafio-olist"
version = "0.1.0"
description = "Desafio técnico Olist (Tech Start)"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
