[tool.poetry]
name = "desafio-olist"
version = "0.1.0"
description = "Desafio técnico Olist (Tech Start)"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
